fix z-index

--- a/css/estilo.sass
+++ b/css/estilo.sass
@@ -183,8 +183,8 @@ p
   width: 100%
   height: 100%
   background: black
-  z-index: 3
   position: absolute
+  top: 0
   .capitulo
     bottom: 50vh !important
   p
